Flag the main dist file.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/altipla-consulting/scroll-floater.git"
   },
+  "main": "dist/scroll-floater.min.js",
   "author": "Altipla Consulting",
   "homepage": "https://github.com/altipla-consulting/scroll-floater",
   "devDependencies": {
